[gd_scene load_steps=16 format=3 uid="uid://b8atlrvod31k3"]

[ext_resource type="Theme" uid="uid://d1qd6ity2mdpl" path="res://creator/creator_ui.theme.tres" id="1_f524u"]
[ext_resource type="PackedScene" uid="uid://bahpo436m8hut" path="res://creator/asset_inventory/browser/search_field.tscn" id="1_rqhvs"]
[ext_resource type="Script" uid="uid://did286vqjm578" path="res://creator/tools/material_browser/material_browser.gd" id="1_vss05"]
[ext_resource type="PackedScene" uid="uid://w2yqlg0c2hvo" path="res://creator/common/asset_slot.tscn" id="2_l6w4a"]
[ext_resource type="PackedScene" uid="uid://jnydrcejt8ji" path="res://creator/common/asset_slot_subwindow.tscn" id="2_y1l5s"]
[ext_resource type="PackedScene" uid="uid://b8wq1oe1dn7pd" path="res://creator/tools/material_browser/instance_slot.tscn" id="3_172by"]
[ext_resource type="PackedScene" uid="uid://c4l0ash8mptsd" path="res://ui/new_player_ui/asset_preview/asset_preview.tscn" id="4_3mfcu"]
[ext_resource type="PackedScene" uid="uid://51hfh08pbhvq" path="res://creator/common/dropdown_search/dropdown_button.tscn" id="4_i0gb4"]
[ext_resource type="StyleBox" uid="uid://dcdx4uxyjvmqv" path="res://ui/new_player_ui/inventory/panel_transparent_bg.tres" id="5_qc8l6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sdu7j"]
bg_color = Color(0.152941, 0.164706, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4abh"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_30r6t"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2171o"]
bg_color = Color(0.145098, 0.419608, 0.984314, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwyqr"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.109804, 0.121569, 0.141176, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.145098, 0.419608, 0.984314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing_size = 1.5

[sub_resource type="Theme" id="Theme_h22q0"]
PanelSlotActive/base_type = &"Panel"
PanelSlotActive/styles/panel = SubResource("StyleBoxFlat_2171o")
PanelSlotHover/base_type = &"Panel"
PanelSlotHover/styles/panel = SubResource("StyleBoxFlat_kwyqr")

[node name="MaterialBrowser" type="Panel"]
custom_minimum_size = Vector2(676, 560)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sdu7j")
script = ExtResource("1_vss05")
local_materials_dir = "res://art/materials/for_users/"
_asset_slot_scene = ExtResource("2_y1l5s")
_instance_slot_scene = ExtResource("3_172by")

[node name="AssetPreview" parent="." instance=ExtResource("4_3mfcu")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Assets" type="MarginContainer" parent="TabContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_f524u")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Assets"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="TabContainer/Assets/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SourceOptionButton" type="OptionButton" parent="TabContainer/Assets/VBoxContainer/TopContainer"]
layout_mode = 2
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "All Materials"
popup/item_0/id = 0
popup/item_1/text = "PBR"
popup/item_1/id = 2

[node name="TypeOptionButton" parent="TabContainer/Assets/VBoxContainer/TopContainer" instance=ExtResource("4_i0gb4")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "All tags"
alignment = 1
default_text = "All Tags"

[node name="SearchField" parent="TabContainer/Assets/VBoxContainer/TopContainer" instance=ExtResource("1_rqhvs")]
layout_mode = 2
size_flags_horizontal = 3

[node name="UploadMaterialButton" type="Button" parent="TabContainer/Assets/VBoxContainer/TopContainer"]
visible = false
layout_mode = 2
text = "Upload Material"

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Assets/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="TabContainer/Assets/VBoxContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b4abh")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Assets/VBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_30r6t")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Assets/VBoxContainer/MarginContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MaterialsListContainer" type="HFlowContainer" parent="TabContainer/Assets/VBoxContainer/MarginContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_h22q0")

[node name="AssetSlot" parent="TabContainer/Assets/VBoxContainer/MarginContainer/Panel/ScrollContainer/VBoxContainer/MaterialsListContainer" instance=ExtResource("2_l6w4a")]
layout_mode = 2

[node name="MoreButton" type="Button" parent="TabContainer/Assets/VBoxContainer/MarginContainer/Panel/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.11574, 0.334708, 0.785156, 1)
theme_override_colors/font_hover_color = Color(0.145098, 0.670588, 0.984314, 1)
theme_override_colors/font_focus_color = Color(0.145098, 0.419608, 0.984314, 1)
theme_override_colors/font_hover_pressed_color = Color(0.119195, 0.344699, 0.808594, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/normal = ExtResource("5_qc8l6")
theme_override_styles/hover = ExtResource("5_qc8l6")
theme_override_styles/pressed = ExtResource("5_qc8l6")
theme_override_styles/disabled = ExtResource("5_qc8l6")
theme_override_styles/focus = ExtResource("5_qc8l6")
text = "Load more materials..."

[node name="NameLabel" type="Label" parent="TabContainer/Assets/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="SourceLabel" type="Label" parent="TabContainer/Assets/VBoxContainer/NameLabel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.552941, 0.552941, 0.639216, 1)
theme_override_font_sizes/font_size = 12
text = "Thank you: AmbientCG.com"
uppercase = true

[node name="Materials In Space" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_f524u")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Materials In Space"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 15

[node name="Panel" type="Panel" parent="TabContainer/Materials In Space/MarginContainer"]
clip_contents = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b4abh")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Materials In Space/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_30r6t")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Materials In Space/MarginContainer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="InstancesListContainer" type="HFlowContainer" parent="TabContainer/Materials In Space/MarginContainer/Panel/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_h22q0")

[node name="AssetSlot" parent="TabContainer/Materials In Space/MarginContainer/Panel/ScrollContainer/VBoxContainer/InstancesListContainer" instance=ExtResource("2_l6w4a")]
layout_mode = 2

[node name="MoreButton" type="Button" parent="TabContainer/Materials In Space/MarginContainer/Panel/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.11574, 0.334708, 0.785156, 1)
theme_override_colors/font_hover_color = Color(0.145098, 0.670588, 0.984314, 1)
theme_override_colors/font_focus_color = Color(0.145098, 0.419608, 0.984314, 1)
theme_override_colors/font_hover_pressed_color = Color(0.119195, 0.344699, 0.808594, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 11
theme_override_styles/normal = ExtResource("5_qc8l6")
theme_override_styles/hover = ExtResource("5_qc8l6")
theme_override_styles/pressed = ExtResource("5_qc8l6")
theme_override_styles/disabled = ExtResource("5_qc8l6")
theme_override_styles/focus = ExtResource("5_qc8l6")
text = "Load more materials..."

[connection signal="item_selected" from="TabContainer/Assets/VBoxContainer/TopContainer/SourceOptionButton" to="." method="_on_source_option_button_item_selected"]
[connection signal="item_selected" from="TabContainer/Assets/VBoxContainer/TopContainer/TypeOptionButton" to="." method="_on_dropdown_button_item_selected"]
[connection signal="text_changed" from="TabContainer/Assets/VBoxContainer/TopContainer/SearchField" to="." method="_on_search_field_text_changed"]
[connection signal="pressed" from="TabContainer/Assets/VBoxContainer/MarginContainer/Panel/ScrollContainer/VBoxContainer/MoreButton" to="." method="_on_more_button_pressed"]
[connection signal="visibility_changed" from="TabContainer/Materials In Space/MarginContainer/Panel/ScrollContainer/VBoxContainer/InstancesListContainer" to="." method="_on_instances_list_container_visibility_changed"]
[connection signal="pressed" from="TabContainer/Materials In Space/MarginContainer/Panel/ScrollContainer/VBoxContainer/MoreButton" to="." method="_on_more_button_pressed"]
